Wed Dec 11 23:11:09 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* bin/clean_sems.sh: A shell script to remove
	  semaphores. Integrating the script that Ossama used to the
	  daily build system.

Wed Dec 11 21:05:49 2002  Steve Huston  <shuston@riverace.com>

        * ace/Message_Block_T.cpp:
        * examples/ASX/Message_Queue/priority_buffer.cpp:
        * examples/Misc/test_read_buffer.cpp:
        * examples/Threads/TSS_Obj.h: Added missing
          #include "ace/Malloc_Base.h" to build clean on AIX, Visual Age C++ 6.

        * examples/C++NPv1/Logging_Client.cpp:
        * examples/C++NPv2/Reactor_Logging_Server.cpp:
        * examples/C++NPv2/Service_Reporter.cpp:
        * examples/C++NPv2/SLD.cpp:
        * examples/C++NPv2/SLDex.cpp: Add missing #include
          "ace/Log_Msg.h" to pick up ACE_ERROR_RETURN for AIX Visual Age C++ 6.

        * examples/C++NPv2/Makefile.SLD: Remove the tempinc-bashing
          redefinition of COMPILE.cc... that only works if there's a single
          source file for each program.

Wed Dec 11 19:33:19 2002  Steve Huston  <shuston@riverace.com>

        * ace/config-hpux-10.x-hpc++.h:
        * ace/config-hpux-10.x.h: Picked up these changes from the 11.x config:

          Sat Nov 23 17:54:18 2002  Steve Huston  <shuston@riverace.com>

          * ace/config-hpux-11.00.h: Control the ACE_HAS_STANDARD_CPP_LIBRARY
            and ACE_USES_STD_NAMESPACE_FOR_STDCPP_LIB settings by compiler-
            defined macro _HP_NAMESPACE_STD, not passing them through from
            platform_hpux_aCC.GNU. Similarly with ACE_HAS_EXCEPTIONS (define
            it unless __HPACC_NOEH is set). This breaks a coupling from the
            platform_hpux_aCC.GNU file, and will make autoconf easier as well
            as making it easier for users to write makefiles without following
            the ties through and trying to duplicate them.